flex/flex-tests/testData/js2_highlighting/UsingFunctionDeclarations.js2
var ff:Function = function result():Boolean { return false; };
var bb:Boolean = ff();
function <warning descr="Unused function foo">foo</warning>(x:Function) {
    var x2:String = x();
    if (true) x2, foo(x(new Main()));
}

class Main {
  public function Main() {
    f3<error descr="Invalid number of arguments, expected 0">("sdfsdf", "sdf")</error>;
  }

  private function f3():void {
    var arguments:Array = [];
    trace(arguments);
  }
}

function trace(... rest):void {
    if (true) trace(rest);
}
